refactor: not support java version low than 1.8